--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get_it: ^4.0.2
+  flutter_bloc: ^4.0.0
+  equatable: ^1.1.1
+  dartz: ^0.9.1
+  connectivity: ^0.4.8+6
+  http: ^0.12.1
+  shared_preferences: ^0.5.7+3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,11 +40,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^4.1.1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
   # The following line ensures that the Material Icons font is
